@@ -26,6 +26,7 @@
 - define monotonic clock helper functions.
 - use monotonic clock for alarm thread condition wait.
 - define pending condition init helper function.
+- use monotonic clock for direct mount condition.
 
 21/04/2015 autofs-5.1.1
 =======================
